[package]
name = "embedded-futures"
version = "0.1.0"
authors = ["Tyler Holmes <tylerdanielholmes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.futures]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[dependencies]
cortex-m = "0.6"

[dev-dependencies]
cortex-m-rt = "0.6"
panic-halt = "0.2"
cortex-m-semihosting = "0.3"
alloc-cortex-m = "0.4"